# rust-hcode

arquivos/src/: arquivo.rs  main.rs
colecoes/src/: main.rs
controle-fluxo/: Cargo.toml
controle-fluxo/src/: main.rs
erros/src/: main.rs
estruturas-enums/: Cargo.toml
estruturas-enums/src/: main.rs
first-program/: main
funcoes/src/: main.rs
hcode_functions/: Cargo.toml  README.md
hcode_functions/src/: lib.rs
modulos/src/: main.rs  matematica.rs
variables-mutability/src/: main.rs
